--- a/src/App.css
+++ b/src/App.css
@@ -206,3 +206,36 @@ input[type="number"] {
 .more-select div {
   padding: 10px;
 }
+
+/* --- CUSTOM THUMB DOTS STYLE --- */
+/* .slick-thumb {
+  display: flex !important;
+  justify-content: space-between;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.slick-thumb li {
+  width: 200px !important;
+  height: 100px !important;
+  border-radius: 10px;
+  overflow: hidden;
+  border: 2px solid transparent;
+}
+
+.slick-thumb li.slick-active {
+  border: 2px solid #98b720;
+  border-radius: 10px;
+}
+
+.thumb-wrapper {
+  width: 200px;
+  height: 100px;
+}
+
+.thumb-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+} */
